none: Fix more javadoc issues.